--- a/site/index.html
+++ b/site/index.html
@@ -5,6 +5,12 @@
 </head>
 <body>
 <h1>Hola mundo!!!!!</h1>
-<h2>It´s a great course</h2>
+<h2>It´s a great course fsdfsdfasdfsdfasd dasdfsdasfasdasdf</h2>
+<h1>Subheading 1</h1>
+<h2>Subheading 2</h2>
+<h3>Subheading 3</h3>
+<h4>Subheading 4</h4>
+<h5>Subheading 5</h5>
+<h6>Subheading 6</h6>
 </body>
 </html>
