small addition to out page content.

--- a/site/index.html
+++ b/site/index.html
@@ -4,6 +4,7 @@
 	<title></title>
 </head>
 <body>
-
+<h1>Hello!!! </h1>
+<span>Esta es una prueba de como se puede crear y subir una pagina WEB</span>
 </body>
 </html>
